[FIX]: Star icon is visible when you hover over message.

--- a/app/theme/client/imports/components/messages.css
+++ b/app/theme/client/imports/components/messages.css
@@ -202,6 +202,10 @@
 			& .message-actions {
 				display: flex;
 			}
+
+			& .message-indications {
+				display: flex;
+			}
 		}
 	}
 }
